--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bean Jam Bot | AI Chat Assistant</title>
     <meta name="description" content="Bean Jam Bot - A minimalist brutalist chatbot interface with animated blob reactions" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Aditya Ranjan" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="92c0885e-76cd-4f39-b3ea-ddd91c262af9" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="
+AI chat assistant with voice input support in English and Japanese." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
