--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bean Jam Bot | AI Chat Assistant</title>
-    <meta name="description" content="Bean Jam Bot - A minimalist brutalist chatbot interface with animated blob reactions" />
+    <title>Bean Jam Bot | Date planning AI</title>
+    <meta name="description" content="Bean Jam Bot - AI chat date/restaurant planner assistant with voice input support in English and Japanese." />
     <meta name="author" content="Aditya Ranjan" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="92c0885e-76cd-4f39-b3ea-ddd91c262af9" />
     <meta property="og:description" content="
-AI chat assistant with voice input support in English and Japanese." />
+AI chat date/restaurant planner assistant with voice input support in English and Japanese." />
     <meta property="og:type" content="website" />
 
   </head>
